--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "gulp lint",
+    "start": "browser-sync start --server --files '**/*.{html,css,js}' --no-ui --no-open",
     "test": "jasmine JASMINE_CONFIG_PATH=jasmine.json"
   },
   "keywords": [],
@@ -16,6 +18,10 @@
     "request": "^2.67.0"
   },
   "devDependencies": {
+    "eslint-config-standard": "^4.4.0",
+    "eslint-plugin-standard": "^1.3.1",
+    "gulp": "^3.9.0",
+    "gulp-eslint": "^1.1.1",
     "jasmine": "^2.4.1"
   }
 }
