--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^0.19.0",
     "co": "^4.6.0",
     "html-pdf": "^1.4.0",
+    "minimist": "^1.2.0",
     "request": "^2.67.0"
   },
   "devDependencies": {
@@ -31,5 +32,8 @@
     "postcss-reporter": "^1.3.0",
     "stylelint": "^2.3.5",
     "stylelint-config-nju33": "^0.1.1"
+  },
+  "bin": {
+    "readme-book": "./cli.js"
   }
 }
