--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "eslint-plugin-standard": "^1.3.1",
     "gulp": "^3.9.0",
     "gulp-eslint": "^1.1.1",
-    "jasmine": "^2.4.1"
     "gulp-postcss": "^6.0.1",
+    "jasmine": "^2.4.1",
     "postcss-cson-cssvars": "0.0.11",
     "postcss-namespace": "^0.2.1",
     "postcss-preref": "0.0.3",
